--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,7 +38,7 @@ background-color: rgba(0,0,0,.6);
     width: 40%;
 }
 label,#login_message {
-    color: #428bca;
+    color: 	#5cb85c;
     font-family: 'Roboto', sans-serif;
     
 }
