--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,8 +21,8 @@ body {
 }
 form {
 margin-top: 50px;
-margin-left: 35%;
-width: 25%;
+/*margin-left: 35%;
+width: 25%;*/
 padding-top: 2%;
 padding-left: 25px ;
 padding-right: 25px;
